[project]
name = "kdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dowhy>=0.14",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "ortools>=9.15.6755",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.0",
    "sqlalchemy>=2.0.48",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "uvicorn>=0.41.0",
    "osmnx>=2.1.0",
    "pandas>=3.0.1",
    "networkx>=3.6.1",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "pygraphviz>=1.14",
    "playwright>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
