[package]
name = "telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dashmap = "6.1.0"
parking_lot = "0.12.5"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tonic = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
prost-build = "0.14.3"
tonic-build = "0.14.5"
